--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Api_HW</artifactId>
+    <artifactId>Api_HW08</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Api_HW</name>
+    <name>Api_HW08</name>
 
     <build>
-        <finalName>Api_HW</finalName>
+        <finalName>Api_HW08</finalName>
         <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
